--- a/exercicios/ex022/fundo006.html
+++ b/exercicios/ex022/fundo006.html
@@ -10,15 +10,17 @@
             height: 100vh;
             background-color: black;
             background-image: url(imagens/wallpaper002.jpg);
-            background-position: center top;
-            background-repeat: no-repeat;
+            background-position: center center;
+            background-repeat: repeat-y;
             background-size: cover;
+            background-attachment: fixed;
         }
+        /*color > image > position >repeat >[size] > attachment */
 
         main {
             border: 1px solid darkblue;
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             margin: auto;
             border-radius: 15px;
@@ -31,7 +33,27 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium maiores molestiae veritatis consequuntur asperiores officia culpa esse illum? Tempore assumenda asperiores dolorum perferendis officia alias commodi repellendus placeat adipisci ipsa?
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae nihil atque quaerat maiores dolores accusamus eaque vero minima ratione quasi, nesciunt minus, ab doloremque cumque. Minima ea totam beatae dolores!
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis similique esse fuga modi ipsum perferendis dolorem? Voluptatibus cumque earum, voluptatem alias qui dolorem officia amet eveniet, aut nobis laudantium natus.
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo, quas dolorem, reiciendis aliquam saepe sapiente quisquam reprehenderit soluta blanditiis sint pariatur commodi non dicta, magnam alias sequi incidunt vero veniam.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis aspernatur veritatis dolore temporibus eius consectetur modi consequatur tempora numquam at, ea odio, beatae perferendis eum hic veniam ut! Dignissimos, quasi.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur fugit non veritatis, illo accusamus cupiditate. Aperiam fuga modi nisi esse. Id illum quasi commodi iure possimus cum fugiat odit necessitatibus.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem deleniti, laboriosam nobis voluptates fugiat numquam labore molestiae aliquam quia consequuntur, mollitia provident hic vel tempore explicabo alias. Fugit, blanditiis. Repellendus
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Error totam praesentium pariatur modi ipsa aliquam et facilis vitae corporis, nihil in expedita voluptas dolor repudiandae magnam placeat harum aut iste?
         </p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium maiores molestiae veritatis consequuntur asperiores officia culpa esse illum? Tempore assumenda asperiores dolorum perferendis officia alias commodi repellendus placeat adipisci ipsa?
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae nihil atque quaerat maiores dolores accusamus eaque vero minima ratione quasi, nesciunt minus, ab doloremque cumque. Minima ea totam beatae dolores!
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis similique esse fuga modi ipsum perferendis dolorem? Voluptatibus cumque earum, voluptatem alias qui dolorem officia amet eveniet, aut nobis laudantium natus.
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo, quas dolorem, reiciendis aliquam saepe sapiente quisquam reprehenderit soluta blanditiis sint pariatur commodi non dicta, magnam alias sequi incidunt vero veniam.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis aspernatur veritatis dolore temporibus eius consectetur modi consequatur tempora numquam at, ea odio, beatae perferendis eum hic veniam ut! Dignissimos, quasi.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur fugit non veritatis, illo accusamus cupiditate. Aperiam fuga modi nisi esse. Id illum quasi commodi iure possimus cum fugiat odit necessitatibus.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem deleniti, laboriosam nobis voluptates fugiat numquam labore molestiae aliquam quia consequuntur, mollitia provident hic vel tempore explicabo alias. Fugit, blanditiis. Repellendus
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Error totam praesentium pariatur modi ipsa aliquam et facilis vitae corporis, nihil in expedita voluptas dolor repudiandae magnam placeat harum aut iste? <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium maiores molestiae veritatis consequuntur asperiores officia culpa esse illum? Tempore assumenda asperiores dolorum perferendis officia alias commodi repellendus placeat adipisci ipsa?
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae nihil atque quaerat maiores dolores accusamus eaque vero minima ratione quasi, nesciunt minus, ab doloremque cumque. Minima ea totam beatae dolores!
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis similique esse fuga modi ipsum perferendis dolorem? Voluptatibus cumque earum, voluptatem alias qui dolorem officia amet eveniet, aut nobis laudantium natus.
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo, quas dolorem, reiciendis aliquam saepe sapiente quisquam reprehenderit soluta blanditiis sint pariatur commodi non dicta, magnam alias sequi incidunt vero veniam.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis aspernatur veritatis dolore temporibus eius consectetur modi consequatur tempora numquam at, ea odio, beatae perferendis eum hic veniam ut! Dignissimos, quasi.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur fugit non veritatis, illo accusamus cupiditate. Aperiam fuga modi nisi esse. Id illum quasi commodi iure possimus cum fugiat odit necessitatibus.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem deleniti, laboriosam nobis voluptates fugiat numquam labore molestiae aliquam quia consequuntur, mollitia provident hic vel tempore explicabo alias. Fugit, blanditiis. Repellendus
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Error totam praesentium pariatur modi ipsa aliquam et facilis vitae corporis, nihil in expedita voluptas dolor repudiandae magnam placeat harum aut iste?
     </main>
     
 </body>
